# netcad-demo-meraki-1

./: .pre-commit-config.yaml  netcad.toml  pyproject.toml
.netcad/device-types/: MR42.json  MR52.json  MS120-8FP.json  MS220-8P.json  MX65.json  MX68CW-NA.json
checks/ap01-dl1/: cabling.json  device.json  interfaces.json  ipaddrs.json  transceivers.json
checks/ap01-dl1/results/: cabling.json  device.json  interfaces.json
checks/ap01-dl2/: cabling.json  device.json  interfaces.json  ipaddrs.json  transceivers.json
checks/ap01-dl2/results/: cabling.json  device.json  interfaces.json
checks/ap01-dl3/: cabling.json  device.json  interfaces.json  ipaddrs.json  transceivers.json
checks/ap01-dl3/results/: cabling.json  device.json  interfaces.json
checks/ms01-dl1/: cabling.json  device.json  interfaces.json  ipaddrs.json  transceivers.json
checks/ms01-dl1/results/: cabling.json  device.json  interfaces.json
checks/ms01-dl2/: cabling.json  device.json  interfaces.json  ipaddrs.json  transceivers.json
checks/ms01-dl2/results/: cabling.json  device.json  interfaces.json
checks/ms01-dl3/: cabling.json  device.json  interfaces.json  ipaddrs.json  transceivers.json
checks/ms01-dl3/results/: cabling.json  (+2 more)
checks/mx01-dl1/: cabling.json  device.json  interfaces.json  ipaddrs.json  transceivers.json
checks/mx01-dl2/: cabling.json  device.json  interfaces.json  ipaddrs.json  transceivers.json
netcad_demo_meraki1/: design.py  vlans.py
netcad_demo_meraki1/device_roles/: __init__.py  device_types.py
netcad_demo_meraki1/profiles/: __init__.py  physical.py
(+4 files in other folders)
